inserted github page link, fira sans font

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
    <title>Colorsample</title>
    <meta name='viewport' content='width=device-width, initial-scale=1'>
+   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600" rel="stylesheet">
+
    <script src='./generator/lib/tinycolor.js'></script>
    <script type="module">
       import {generateColors, interpolate} from './generator/lib/colorGenerator.js';
@@ -131,8 +133,8 @@
       html {
          margin: 0;
          padding: 0;
-         font-family: Calibri;
-         font-weight: bold;
+         font-family: 'Fira Sans', Calibri, sans-serif;
+         font-weight: 500;
          font-size: 1.3vmax;
          background: #191a26
       }
