--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
    <title>Semantic Rainbow</title>
    <meta name='viewport' content='width=device-width, initial-scale=1'>
-   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600" rel="stylesheet">
+   <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,600" rel="stylesheet">
    <script src='./generator/lib/tinycolor.js'></script>
    <script type="module">
       import {generateColors, interpolate} from './generator/lib/colorGenerator.js';
@@ -142,8 +142,13 @@
       }
 
       .text {
+         font-weight: 400;
          width: 90vw;
          margin: 0 auto;
+      }
+
+      .text h3 {
+         font-weight: 400;
       }
 
       .ctx {
@@ -160,10 +165,31 @@
       <div id="colorTable"></div>
 
       <div class="text">
-         <h2 id="spec">FAQ</h2>
-         <p>Coming Soon</p>
-         <h2 id="spec">Design Philosophy</h2>
-         <p>Coming Soon</p>
+         <h2 id="faq">FAQ</h2>
+         <p> <em>Q: Are that many colors really neccessary?</em><br>A: No, absolutely not. Some of them are in fact completely ludicrous.<br>For example if you know any language in which <em>static async enum members</em> are a thing I would love to see it.
+            On the bright side, that means that not every single color needs to be the most beautiful tone, and that I don&#39;t need to worry about teh contrast between some colors if one of them is a super weird or even impossible edge case.</p>
+         <p><em>Q: I can&#39;t get the private token modifier in TypeScript to work, am I doing something wrong?</em>
+            A: No, the private modifier isn&#39;t implemented in the Typescript language server yet</p>
+         <p> <em>Q: Some of those colors seem pretty close to each other, is it really possible to tell them apart?</em><br> A: It is true that some colors would be hard to distinguish in <em>isolation</em> but in actual code tokens are literally surrounded by context. You&#39;d be surprised how many slight differences you pick up subconsciously after a while.</p>
+         <p><em>Q: But some of them seem pretty much identical?</em><br>A: That would be the declaration styles. That&#39;s because they are mainly differentiated from other tokens by being shown in <em>italics</em>.</p>
+         <p><em>Q: With which languages have you tested this theme?</em><br>A: I am mainly testing this new changes in TypeScript
+            are Python, CSS/SCSS, HTML, twig, </p>
+         <h2 id="design-philosophy">Design Philosophy</h2>
+         <p>I am not going to pretend that I went into this with a definite concept and a background in color psychology. Many of these color associations emerged basically on their own as I was tweaking colors back and forth and later I went back to figure out <em>how</em> they might work.</p>
+         <h3 id="red-valuesinformation"><strong>Red:</strong> Values/Information</h3>
+         <h3 id="purple-keywordsflow-control"><strong>Purple:</strong> keywords/flow control</h3>
+         <h3 id="blue-actiontransformation"><strong>Blue:</strong> Action/Transformation</h3>
+         <h3 id="green-statestorage"><strong>Green:</strong> State/Storage</h3>
+         <h3 id="yellow-static-definitionsspecific-values"><strong>Yellow:</strong> Static Definitions/specific values</h3>
+         <p>And finally...</p>
+         <h3 id="saturation-is-associated-to-mutability"><strong>Saturation</strong> is associated to mutability.</h3>
+         <p>That designates a definition or action for the tokens around itself.</p>
+         <p>Whenever you see red, you know information is being accessed and processed</p>
+         <p>Parameters are orange because in addition to storing values like regular variables they veer in the direction of statefullness (green), as they represent the specific state of a single execution of a function.</p>
+         <p>For example methods are midway between the blue of functions and the green of classes, representing them being being influenced a specific state moreso than normal functions</p>
+         <p>Basically just to distinguish them from normal objects and namespaces.</p>
+
+
       </div>
 
 </body>
