--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
       * {
          box-sizing: border-box;
          color: white;
-         text-shadow: 2px 2px 5px black, 0px 0px 2px black;
+         text-shadow: 2px 2px 5px black, 0 0 2px black;
       }
 
       table {
