--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
    <title>Semantic Rainbow</title>
    <meta name='viewport' content='width=device-width, initial-scale=1'>
    <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,500,600" rel="stylesheet">
+   <link rel="icon" href="./assets/SR_favicon.ico" type="image/x-icon" />
    <script src='./generator/lib/tinycolor.js'></script>
    <script type="module">
       import {generateColors, interpolate} from './generator/lib/colorGenerator.js';
